--- a/style.css
+++ b/style.css
@@ -9,45 +9,19 @@
 }
 
 .buttons {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(5,100px);
     height: 650px;
     align-items: center;
 
 }
 
-.numberPad {
-    display:grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 80px 80px 80px 80px; 
-    column-gap: 10px;
-    row-gap: 15px;
-    background-color: lightseagreen;
-    font-weight: 700;
-    font-size: 30px;
-    height: auto;
-
+#equals, #zero{
+      grid-column: span 2;
   }
 
-  .operators {
-      display:grid;
-      grid-template-columns: 100px 100px 100px;
-      grid-template-rows: 80px 80px 80px;
-      column-gap: 10px;
-      row-gap: 10px;
-      background-color: lightcoral;
-      font-weight: 700;
-      font-size: 30px;
-  }
+.digit, .operator, .clearOperator, .delOperator, .equalsOperator{
+    height: 100px;
+}
 
-  .screen {
-      display:flex;
-      background-color: lightblue;
-      border-color: black;
-      height: 50px;
-      text-align: center;
-      justify-content: right;
-      padding-right: 10px;
-      align-items: center;
-
-  }
