--- a/style.css
+++ b/style.css
@@ -1,27 +1,49 @@
-.calc-container {
+.container {
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    width: 400px;
-    height: 800px;
-    /* gap: 10px; */
-    background-color: gray;
+    max-width: 500px;
+    border: 5px black;
+    margin: auto;
+    background-color: slategray;
+    border-style: solid;
+    border-color: lightgray;
+    padding: 10px;
+}
+
+.screen {
+    text-align: right;
+    height: 40px;
+    line-height: 30px;
+    padding: 16px 8px;
+    font-size: 25px;
+    background-color: lightblue;
+    
+
 }
 
 .buttons {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(5,100px);
-    height: 650px;
-    align-items: center;
+    grid-template-columns: repeat(4, 2fr);
+    grid-template-rows: repeat(4, 2fr);
+    font-size: 30px;
+    padding: 5px 5px;
+    color: white;
+    gap: 10px 10px;
+    margin: repeat(4,10px);
+}
+
+
+#equals {
+    grid-column-start: 4;
+}
+#zero {
+    grid-column-start: 2;
+}
+
+.screen {
+    display: flex;
+    flex-direction: column;
 
 }
 
-#equals, #zero{
-      grid-column: span 2;
-  }
-
-.digit, .operator, .clearOperator, .delOperator, .equalsOperator{
-    height: 100px;
-}
 
